[package]
name = "rtwi"
version = "0.1.0"
authors = ["earlgray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
dotenv = "0.15.0"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.8"
chrono = "0.4"
rand = "0.8"
percent-encoding = "2.1.0"
base64 = "0.13.0"
hmac-sha1 = "0.1.3"
clap = "3.0.0-beta.2"