[package]
name = "rtwi"
version = "0.2.0"
authors = ["earlgray"]
edition = "2018"
description = "Twitter Command Line Tool for people who hope real twitter"
license = "MIT"
repository = "https://github.com/earlgray283/rtwi"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "twitter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.23", features = ["rt", "macros", "rt-multi-thread"] }
dotenv = "0.15"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
chrono = "0.4"
rand = "0.8"
percent-encoding = "2.2"
base64 = "0.20.0"
hmac-sha1 = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
